# LoopMachine

./: .gitignore  ANALYSE.md  CODE_REVIEW.md  Cargo.toml  MANUAL.md  VERBETERPLAN.md  app.manifest  app.rc  arrangerStappenPlan.md  build.rs
keyfinder/: keyfinder.lib
src/: app.rs  arrangement.rs  chroma.rs  loops.rs  main.rs  session.rs  shortcuts.rs  timestretch.rs  video_player.rs  waveform.rs  waveform_player.rs
src/app/: event_handler.rs  mod.rs  ui_arranger.rs  ui_export.rs  ui_library.rs  ui_setup.rs  ui_shortcuts.rs  ui_toolbar.rs
