[package]
name = "loopMachine"
version = "0.1.0"
edition = "2021"
authors = ["JMWatte"]
description = "Een minimalistische, toetsenbord-gestuurde hiërarchische muziekspeler"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[features]
default = ["rubberband"]
rubberband = []

[dependencies]
# --- GUI Framework ---
eframe = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }

# --- Audio Weergave & Decodering ---
rodio = { version = "0.19", features = ["symphonia-all"] }
symphonia = "0.5"

# --- Serialisatie ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Concurrency ---
crossbeam-channel = "0.5"

# --- Audio time-stretching (fallback) ---
soundtouch = { version = "0.5", features = ["bundled"] }

# --- FFT analyse ---
rustfft = "6.4"

# --- File dialog (egui-native, compatibel met egui 0.28) ---
egui-file-dialog = "0.6"

# --- Audio encoding (export) ---
hound = "3.5"

[build-dependencies]
cc = "1.0"
embed-resource = "3.0"
